--- a/index.html
+++ b/index.html
@@ -6,49 +6,62 @@
   <title>ADO Security & Protection Services</title>
   <meta name="description" content="Trusted security agency in Mumbai for residential, commercial, and event services.">
   <link rel="icon" href="images/favicon.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Material+Icons&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    /* Fix bold text in nav on mobile */
-    .mobile-menu { display: none; }
-    @media (max-width: 767px) {
-      .mobile-menu { display: block; }
-      .desktop-menu { display: none; }
+    .material-icons { font-family: 'Material Icons', sans-serif; font-size: 2.25rem; }
+    .service-card {
+      transition: transform .2s, box-shadow .2s;
+    }
+    .service-card:hover {
+      transform: translateY(-4px) scale(1.05);
+      box-shadow: 0 4px 32px 0 rgba(59, 130, 246, 0.25);
+    }
+    .service-card .icon-bg {
+      background: linear-gradient(135deg, #2563eb, #38bdf8);
+    }
+    .service-card .icon-shadow {
+      box-shadow: 0 1px 16px 0 rgba(59, 130, 246, 0.13);
+    }
+    .section-fade { animation: fadeIn 1.1s cubic-bezier(.4,0,.2,1); }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(20px);} to { opacity:1; transform:none;} }
+    .wave {
+      position: absolute;
+      left:0; right:0; top:99%;
+      width:100%; height:48px;
+      z-index:2; pointer-events:none;
     }
   </style>
 </head>
-<body class="flex flex-col min-h-screen bg-white">
+<body class="bg-white flex flex-col min-h-screen">
   <!-- Navbar -->
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
       <div class="flex items-center space-x-3">
         <img src="images/ADO_Logo.png" alt="ADO Security & Protection Services Logo" class="h-10 w-10 object-contain" />
-        <span class="text-lg sm:text-xl md:text-3xl font-bold text-blue-700 leading-tight">ADO SECURITY &<br class="block sm:hidden"/> PROTECTION SERVICES</span>
+        <span class="text-lg sm:text-xl md:text-3xl font-bold text-blue-700 leading-tight">
+          ADO SECURITY &<br class="block sm:hidden"/> PROTECTION SERVICES
+        </span>
       </div>
-      <!-- Desktop Nav -->
-      <nav class="desktop-menu">
+      <nav class="desktop-menu hidden md:block">
         <ul class="flex space-x-6">
           <li><a href="index.html" class="text-blue-700 border-b-2 border-blue-700 pb-1 font-semibold">Home</a></li>
           <li><a href="about.html" class="hover:text-blue-700">About</a></li>
-          <li><a href="services.html" class="hover:text-blue-700">Services</a></li>
           <li><a href="gallery.html" class="hover:text-blue-700">Gallery & Clients</a></li>
           <li><a href="contact.html" class="hover:text-blue-700">Contact</a></li>
         </ul>
       </nav>
-      <!-- Mobile Hamburger -->
-      <button id="menu-btn" class="mobile-menu relative z-50 block md:hidden focus:outline-none" aria-label="Toggle navigation">
+      <button id="menu-btn" class="mobile-menu md:hidden block bg-blue-50 rounded p-1" aria-label="Toggle navigation">
         <svg class="w-7 h-7 text-blue-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
         </svg>
       </button>
-      <!-- Mobile Nav -->
       <nav id="mobile-nav" class="mobile-menu absolute right-4 top-20 bg-white shadow-lg rounded-lg w-44 py-2 transition-all duration-200 ease-in-out scale-0 opacity-0 pointer-events-none">
         <ul class="flex flex-col space-y-1 text-base">
           <li><a href="index.html" class="block px-4 py-2 text-blue-700 font-semibold">Home</a></li>
           <li><a href="about.html" class="block px-4 py-2 hover:text-blue-700">About</a></li>
-          <li><a href="services.html" class="block px-4 py-2 hover:text-blue-700">Services</a></li>
           <li><a href="gallery.html" class="block px-4 py-2 hover:text-blue-700">Gallery & Clients</a></li>
           <li><a href="contact.html" class="block px-4 py-2 hover:text-blue-700">Contact</a></li>
         </ul>
@@ -57,72 +70,127 @@
   </header>
 
   <main class="flex-grow">
+
     <!-- Hero Section -->
-    <section class="bg-white py-8 md:py-16">
-      <div class="container mx-auto px-4 flex flex-col-reverse md:flex-row items-center justify-between gap-8">
-        <!-- Text Content -->
-        <div class="md:w-1/2 text-center md:text-left mt-6 md:mt-0">
-          <h1 class="text-2xl xs:text-3xl md:text-5xl font-extrabold leading-tight mb-4 text-gray-900">
-            Your Safety, Our Priority
+    <section class="relative bg-white pt-10 pb-24 md:pt-16 section-fade">
+      <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center md:justify-between gap-12 px-4">
+        <!-- Left: Text -->
+        <div class="md:w-1/2 text-center md:text-left">
+          <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold mb-3 leading-tight text-blue-700">
+            Your Safety,<br class="hidden md:inline" /> Our Priority
           </h1>
-          <p class="text-base xs:text-lg text-gray-700 mb-6">
-            Trusted Security for Homes, Corporates & Events
+          <p class="text-lg sm:text-xl mb-7 text-gray-700 font-medium">
+            Trusted Security for Homes, Corporates & Events<br class="hidden md:inline"/>
+            Experience the difference since <span class="text-blue-500 font-bold">1985</span>.
           </p>
           <a href="contact.html"
-             class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 text-base xs:text-lg rounded shadow-lg transition-all duration-300 block md:inline-block mx-auto md:mx-0 w-fit">
-            Contact Us
-          </a>
+             class="inline-block bg-gradient-to-r from-blue-600 to-blue-400 text-white px-8 py-3 text-lg rounded shadow-lg font-bold transform-gpu hover:scale-105 transition duration-300"
+          >Request Protection</a>
         </div>
-        <!-- Swiper Slideshow -->
+        <!-- Right: Swiper -->
         <div class="md:w-1/2 w-full">
-          <div class="swiper w-full h-52 xs:h-80 sm:h-96 md:h-[650px] rounded-xl shadow-xl overflow-hidden">
+          <div class="swiper w-full h-56 xs:h-80 sm:h-96 md:h-[420px] rounded-2xl shadow-xl overflow-hidden">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="images/Img1.jpeg" alt="ADO Security Guard on duty" class="w-full h-full object-cover" />
-              </div>
-              <div class="swiper-slide">
-                <img src="images/img2.jpeg" alt="Event Security Team" class="w-full h-full object-cover" />
-              </div>
-              <div class="swiper-slide">
-                <img src="images/img5.jpeg" alt="Building Guard at work" class="w-full h-full object-cover" />
-              </div>
+              <div class="swiper-slide"><img src="images/Img1.jpeg" alt="ADO Security Guard on duty" class="w-full h-full object-cover" /></div>
+              <div class="swiper-slide"><img src="images/img2.jpeg" alt="Event Security Team" class="w-full h-full object-cover" /></div>
+              <div class="swiper-slide"><img src="images/img5.jpeg" alt="Building Guard at work" class="w-full h-full object-cover" /></div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
       </div>
+      <!-- Decorative wave divider -->
+      <svg class="wave" viewBox="0 0 1440 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0,28C115.5,28,172.5,2,288,2S430.5,46,576,46S748.5,2,864,2S1167.5,28,1440,28V48H0Z" fill="#f6fafc"/></svg>
     </section>
-    <!-- SwiperJS Script (recommended at end of body) -->
+
+    <!-- Services Section -->
+    <section class="py-14 px-2 xs:px-4 sm:px-6 md:px-8 lg:px-16 bg-gray-50 relative z-10 section-fade">
+      <div class="max-w-6xl mx-auto">
+        <div class="text-center mb-12">
+          <h2 class="text-2xl xs:text-3xl md:text-4xl font-extrabold text-blue-700 mb-2">Our Security Services</h2>
+          <div class="w-16 mx-auto mb-3 h-1 bg-gradient-to-r from-blue-700 to-blue-300 rounded-full"></div>
+          <p class="max-w-xl mx-auto text-gray-600 text-base sm:text-lg">Expert protection for every need—handled with professionalism, discretion, and care.</p>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-8">
+          <!-- Card 1 -->
+          <div class="service-card bg-white p-7 rounded-2xl shadow-md text-center flex flex-col items-center hover:ring-2 hover:ring-blue-200">
+            <div class="icon-bg icon-shadow flex items-center justify-center mb-5 rounded-full w-16 h-16">
+              <span class="material-icons text-white text-4xl">verified_user</span>
+            </div>
+            <h3 class="text-lg sm:text-xl font-bold text-blue-600 mb-2">Security Services</h3>
+            <p class="text-sm sm:text-base text-gray-600 mb-2">Trained, alert personnel guard residential and commercial buildings 24/7.</p>
+          </div>
+          <!-- Card 2 -->
+          <div class="service-card bg-white p-7 rounded-2xl shadow-md text-center flex flex-col items-center hover:ring-2 hover:ring-blue-200">
+            <div class="icon-bg icon-shadow flex items-center justify-center mb-5 rounded-full w-16 h-16">
+              <span class="material-icons text-white text-4xl">event_available</span>
+            </div>
+            <h3 class="text-lg sm:text-xl font-bold text-blue-600 mb-2">Event Security</h3>
+            <p class="text-sm sm:text-base text-gray-600 mb-2">Reliable bouncers and staff for parties, weddings, corporate, and public events.</p>
+          </div>
+          <!-- Card 3 -->
+          <div class="service-card bg-white p-7 rounded-2xl shadow-md text-center flex flex-col items-center hover:ring-2 hover:ring-blue-200">
+            <div class="icon-bg icon-shadow flex items-center justify-center mb-5 rounded-full w-16 h-16">
+              <span class="material-icons text-white text-4xl">security</span>
+            </div>
+            <h3 class="text-lg sm:text-xl font-bold text-blue-600 mb-2">Bodyguard Services</h3>
+            <p class="text-sm sm:text-base text-gray-600 mb-2">Professional bodyguards for VIPs, celebrities, executives, and personal security.</p>
+          </div>
+          <!-- Card 4 -->
+          <div class="service-card bg-white p-7 rounded-2xl shadow-md text-center flex flex-col items-center hover:ring-2 hover:ring-blue-200">
+            <div class="icon-bg icon-shadow flex items-center justify-center mb-5 rounded-full w-16 h-16">
+              <span class="material-icons text-white text-4xl">business_center</span>
+            </div>
+            <h3 class="text-lg sm:text-xl font-bold text-blue-600 mb-2">Commercial Security</h3>
+            <p class="text-sm sm:text-base text-gray-600 mb-2">Smartly dressed, trained staff for office buildings, banks, and IT parks.</p>
+          </div>
+          <!-- Card 5 -->
+          <div class="service-card bg-white p-7 rounded-2xl shadow-md text-center flex flex-col items-center hover:ring-2 hover:ring-blue-200">
+            <div class="icon-bg icon-shadow flex items-center justify-center mb-5 rounded-full w-16 h-16">
+              <span class="material-icons text-white text-4xl">hotel</span>
+            </div>
+            <h3 class="text-lg sm:text-xl font-bold text-blue-600 mb-2">Hotel Security</h3>
+            <p class="text-sm sm:text-base text-gray-600 mb-2">Security personnel trained in hospitality and guest safety.</p>
+          </div>
+          <!-- Card 6 -->
+          <div class="service-card bg-white p-7 rounded-2xl shadow-md text-center flex flex-col items-center hover:ring-2 hover:ring-blue-200">
+            <div class="icon-bg icon-shadow flex items-center justify-center mb-5 rounded-full w-16 h-16">
+              <span class="material-icons text-white text-4xl">directions_walk</span>
+            </div>
+            <h3 class="text-lg sm:text-xl font-bold text-blue-600 mb-2">Night Patrolling</h3>
+            <p class="text-sm sm:text-base text-gray-600 mb-2">Mobile teams for community rounds and after-hours business safety.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SwiperJS Script -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
       // Swiper
       const swiper = new Swiper('.swiper', {
         loop: true,
-        pagination: {
-          el: '.swiper-pagination',
-        },
-        autoplay: {
-          delay: 3500,
-          disableOnInteraction: false,
-        },
+        pagination: { el: '.swiper-pagination' },
+        autoplay: { delay: 3500, disableOnInteraction: false },
       });
 
       // Responsive mobile nav
       const menuBtn = document.getElementById('menu-btn');
       const mobileNav = document.getElementById('mobile-nav');
-      menuBtn.addEventListener('click', () => {
-        if (mobileNav.classList.contains('scale-0')) {
-          mobileNav.classList.remove('scale-0', 'opacity-0', 'pointer-events-none');
-          mobileNav.classList.add('scale-100', 'opacity-100');
-        } else {
-          mobileNav.classList.add('scale-0', 'opacity-0', 'pointer-events-none');
-          mobileNav.classList.remove('scale-100', 'opacity-100');
-        }
-      });
-      // Optional: Close nav when link is clicked (improves UX)
-      document.querySelectorAll('#mobile-nav a').forEach(link =>
-        link.addEventListener('click', () => menuBtn.click())
-      );
+      if (menuBtn && mobileNav) {
+        menuBtn.addEventListener('click', () => {
+          if (mobileNav.classList.contains('scale-0')) {
+            mobileNav.classList.remove('scale-0','opacity-0','pointer-events-none');
+            mobileNav.classList.add('scale-100','opacity-100');
+          } else {
+            mobileNav.classList.add('scale-0','opacity-0','pointer-events-none');
+            mobileNav.classList.remove('scale-100','opacity-100');
+          }
+        });
+        document.querySelectorAll('#mobile-nav a').forEach(link =>
+          link.addEventListener('click', () => menuBtn.click())
+        );
+      }
     </script>
   </main>
 
